crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__if_stmt_recovery_7.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"if True:\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: If(
                IfStmt {
                    body: [],
                    cond: Node {
                        node: NameConstantLit(
                            NameConstantLit {
                                value: True,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 7,
                    },
                    orelse: [],
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 8,
        },
    ],
    comments: [],
}
