crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__if_stmt_recovery_9.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests ::\nparsing_module_string(r#\"if True: a = 1\nelse False: b = 1\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: If(
                IfStmt {
                    body: [
                        Node {
                            node: Assign(
                                AssignStmt {
                                    targets: [
                                        Node {
                                            node: Target {
                                                name: Node {
                                                    node: "a",
                                                    filename: "",
                                                    line: 1,
                                                    column: 9,
                                                    end_line: 1,
                                                    end_column: 10,
                                                },
                                                paths: [],
                                                pkgpath: "",
                                            },
                                            filename: "",
                                            line: 1,
                                            column: 9,
                                            end_line: 1,
                                            end_column: 10,
                                        },
                                    ],
                                    value: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 13,
                                        end_line: 1,
                                        end_column: 14,
                                    },
                                    ty: None,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 9,
                            end_line: 1,
                            end_column: 14,
                        },
                    ],
                    cond: Node {
                        node: NameConstantLit(
                            NameConstantLit {
                                value: True,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 7,
                    },
                    orelse: [
                        Node {
                            node: Assign(
                                AssignStmt {
                                    targets: [],
                                    value: Node {
                                        node: NumberLit(
                                            NumberLit {
                                                binary_suffix: None,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        filename: "",
                                        line: 2,
                                        column: 16,
                                        end_line: 2,
                                        end_column: 17,
                                    },
                                    ty: Some(
                                        Node {
                                            node: Named(
                                                Identifier {
                                                    names: [
                                                        Node {
                                                            node: "b",
                                                            filename: "",
                                                            line: 2,
                                                            column: 12,
                                                            end_line: 2,
                                                            end_column: 13,
                                                        },
                                                    ],
                                                    pkgpath: "",
                                                    ctx: Load,
                                                },
                                            ),
                                            filename: "",
                                            line: 2,
                                            column: 12,
                                            end_line: 2,
                                            end_column: 13,
                                        },
                                    ),
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 10,
                            end_line: 2,
                            end_column: 17,
                        },
                    ],
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 2,
            end_column: 17,
        },
    ],
    comments: [],
}
