crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__import_stmt_recovery_1.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"import 'pkg_path'\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Import(
                ImportStmt {
                    path: Node {
                        node: "",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 6,
                    },
                    rawpath: "",
                    name: "",
                    asname: None,
                    pkg_name: "",
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 6,
        },
        Node {
            node: Expr(
                ExprStmt {
                    exprs: [
                        Node {
                            node: StringLit(
                                StringLit {
                                    is_long_string: false,
                                    raw_value: "'pkg_path'",
                                    value: "pkg_path",
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 7,
                            end_line: 1,
                            end_column: 17,
                        },
                    ],
                },
            ),
            filename: "",
            line: 1,
            column: 7,
            end_line: 1,
            end_column: 17,
        },
    ],
    comments: [],
}
