crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__import_stmt_recovery_3.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"import pkg_path[0]\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Import(
                ImportStmt {
                    path: Node {
                        node: "pkg_path",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 15,
                    },
                    rawpath: "pkg_path",
                    name: "pkg_path",
                    asname: None,
                    pkg_name: "",
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 15,
        },
        Node {
            node: Expr(
                ExprStmt {
                    exprs: [
                        Node {
                            node: List(
                                ListExpr {
                                    elts: [
                                        Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        0,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 16,
                                            end_line: 1,
                                            end_column: 17,
                                        },
                                    ],
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 15,
                            end_line: 1,
                            end_column: 18,
                        },
                    ],
                },
            ),
            filename: "",
            line: 1,
            column: 15,
            end_line: 1,
            end_column: 18,
        },
    ],
    comments: [],
}
